--- a/css/sridhar.css
+++ b/css/sridhar.css
@@ -29,7 +29,7 @@ width: 30rem;
 .sridhar-card4{
      background-color:#3EB6C2;
     position: fixed;
-    width: 12%;
+    width: 12.8%;
     margin-right: 10%;
     height: 100%;
 }
@@ -42,7 +42,7 @@ width: 30rem;
 .sridhar-card5{
       background-color:#3EB6C2;
     position: fixed;
-    width: 12.2%;
+    width: 13.2%;
     margin-right: 10%;
     height: 100%;
 }
@@ -67,11 +67,7 @@ div.scrolll {
   }
 
 
-  .sridhar-card6{
-   
-    position: fixed;
-    width: 120%;
-  }
+  
 
 
   #myImg:hover {opacity: 0.5;}
@@ -153,4 +149,31 @@ div.scrolll {
   color: white;
   font-size: 50px;
   padding: 16px 32px;
+}
+
+
+.text1 {
+  font-size: 250%;
+}
+
+.sridhar-card6{
+      background-color:#0256AE;
+    position: fixed;
+    width: 76%;
+    height: 24%;
+}
+
+.sridhar-text2 {
+ 
+  color: white;
+}
+
+
+.sridhar-text3 {
+ 
+  color: white;
+  font-size: 15px;
+  padding: 10px;
+  padding-left:30px; 
+  padding-right:30px;
 }
